--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="The Figures Consultant"
+APP_ENV=production
+APP_KEY=base64:FGkJ1aKq6efXkDrv5BxEhqAkzQs64Dh7RM4sxbI0ZFw=
+APP_DEBUG=false
+APP_URL=http://thefiguresconsultant.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=thefigur_figures
+DB_USERNAME=figures
+DB_PASSWORD=c0n5ult@nTf!G
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,7 +56,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-
-FTP_USER=figures
-FTP_SEC=c0n5ult@nTf!G
