--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ftp.thefiguresconsultant.com
-        username: figures
+        username: figures@thefiguresconsultant.com
         password: ${{ secrets.ftp_password }}
