--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+FTP_CONNECTION=f!gur35Tc
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
